--- a/.gitattributes
+++ b/.gitattributes
@@ -4,14 +4,17 @@
 /.gitattributes             export-ignore
 /.github/                   export-ignore
 /.gitignore                 export-ignore
+/.gitmodules                export-ignore
 /bin/                       export-ignore
 /build/                     export-ignore
 /captainhook.json           export-ignore
 /CHANGELOG.md               export-ignore
 /codecov.yml                export-ignore
 /CODE_OF_CONDUCT.md         export-ignore
+/composer.json              export-ignore
 /CONTRIBUTING.md            export-ignore
 /conventional-commits.json  export-ignore
+/docker-compose.yml         export-ignore
 /docs/                      export-ignore
 /phpcs.xml.dist             export-ignore
 /phpstan.neon.dist          export-ignore
@@ -21,3 +24,4 @@
 /resources/                 export-ignore
 /SECURITY.md                export-ignore
 /tests/                     export-ignore
+/tools/                     export-ignore
